modification du serveur (partie conversation) pour qu'elle concorde avec notre nouveau serveur de messages
