# api/e2etests/api/openapi.yaml
@@ -177,14 +177,14 @@ paths:
       tags:
       - conversation
       x-accepts: application/json
-  /user/conversation/{login}:
+  /user/conversation/{interlocutor}:
     delete:
       parameters:
       - description: Username or peer address of the interlocutor from whom we want
           to delete the conversation
         explode: false
         in: path
-        name: login
+        name: interlocutor
         required: true
         schema:
           type: string
@@ -211,7 +211,7 @@ paths:
           to retrieve the conversation
         explode: false
         in: path
-        name: login
+        name: interlocutor
         required: true
         schema:
           type: string
@@ -553,25 +553,46 @@ components:
         type: object
     ConversationDTO:
       example:
+        user1: alv@pingpal
+        user2: anmi@pingpal
         lastMessageDate: 10-10-2023 12:30:22
-        userID: ambre_lv
-        peerAddress: alv@domain
+        id: 667bdc23-3de4-482f-a0f4-3391452a7742
+        messagesDTOS:
+        - to: lvhoa@pingpal
+          type: text/plain
+          body: This is the message
+        - to: lvhoa@pingpal
+          type: text/plain
+          body: This is the message
       properties:
-        userID:
-          description: Username of the interlocutor
-          example: ambre_lv
+        id:
+          description: Id of the conversation
+          example: 667bdc23-3de4-482f-a0f4-3391452a7742
+          format: uuid
           type: string
-        peerAddress:
-          example: alv@domain
+        user1:
+          description: one of the two users involved in the conversation
+          example: alv@pingpal
+          type: string
+        user2:
+          description: one of the two users involved in the conversation
+          example: anmi@pingpal
           type: string
         lastMessageDate:
           description: Date of the last sent message to be able to sort conversations
             from the newest to the oldest
           example: 10-10-2023 12:30:22
           type: string
+        messagesDTOS:
+          description: List of messages exchanged in the conversation
+          items:
+            $ref: '#/components/schemas/MessageDTO'
+          type: array
       required:
       - lastMessageDate
-      - peerAddress
+      - messages
+      - user1
+      - user2
       type: object
     NewMessageDTO:
       description: New message information
