# server/src/main/java/fr/mightycode/cpoo/server/controller/ConversationController.java
@@ -5,6 +5,7 @@ import fr.mightycode.cpoo.server.service.ConversationService;
 import jakarta.servlet.ServletException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.*;
@@ -23,17 +24,20 @@ import java.util.regex.Pattern;
 @Slf4j
 public class ConversationController {
 
+  @Value("${cpoo.server.domain}")
+  private String serverDomain;
+
   private final ConversationService conversationService;
 
   /**
-   * Retrieve all conversations of a given user (the current user)
+   * Retrieve all conversations of the logged-in user
    *
-   * @param user The logged user
+   * @param user The logged users
    * @return The list of all conversations
    */
   @GetMapping(value = "conversations", produces = MediaType.APPLICATION_JSON_VALUE)
   public List<ConversationDTO> listConversationsGet(final Principal user) {
-    String loggedUser=user.getName();
+    String loggedUser = user.getName() + '@' + serverDomain;
     try {
       List<ConversationDTO> conversations = conversationService.getConversations(loggedUser);
       if (conversations == null) {
@@ -56,33 +60,20 @@ public class ConversationController {
     @PostMapping(value = "newConversation/{interlocutor}", produces = MediaType.APPLICATION_JSON_VALUE)
     public ConversationDTO createEmptyConversation(final Principal user, @PathVariable final String interlocutor) {
       log.info("Create new conversation");
-      String address = interlocutor;
-      if (!isAddress(interlocutor)) { // Vérifie si login ne correspond pas au format d'address
-        //càd le login est supposé être un user de l'application
-        address = interlocutor + "0at0pingpal";
-      }
-        return conversationService.createEmptyConversation(user.getName(),address);
+        return conversationService.createEmptyConversation(user.getName() + '@' + serverDomain, interlocutor);
     }
 
   /**
    * Search and get an existing conversation with a given user
    *
    * @param user The current user logged in
-   * @param login The login with whom the conversation is exchanged
+   * @param interlocutor The address of the interlocutor
    * @return The conversationDTO that corresponds
    */
-  @GetMapping(value = "{login}", produces = MediaType.APPLICATION_JSON_VALUE)
-  public ConversationDTO getOneConversation(final Principal user, @PathVariable String login) {
-    String address = login;
-    if (!isAddress(login)) { // Vérifie si login ne correspond pas au format d'address
-      //càd le login est supposé être un user de l'application
-      if(conversationService.logMember(login)==null){
-        throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Recipient user does not exist");
-      }
-      address = login + "0at0pingpal"; // si existe on rend son adresse
-    }
+  @GetMapping(value = "{interlocutor}", produces = MediaType.APPLICATION_JSON_VALUE)
+  public ConversationDTO getOneConversation(final Principal user, @PathVariable String interlocutor) {
     try {
-      return conversationService.getOneConversation(user.getName(), address);
+      return conversationService.getOneConversation(user.getName() + '@' + serverDomain, interlocutor);
     } catch (ResponseStatusException ex) {
       if (ex.getStatusCode() == HttpStatus.NOT_FOUND) {
         throw ex;
@@ -96,32 +87,32 @@ public class ConversationController {
    * Delete an existing conversation with a given user
    *
    * @param user The current user logged in
-   * @param login The login user with whom the conversation is exchanged
+   * @param interlocutor The login user with whom the conversation is exchanged
    */
-  @DeleteMapping(value = "{login}")
-  public void deleteOneConversation(final Principal user, @PathVariable String login) {
-    String address = login;
-    if (!isAddress(login)) { // Vérifie si login ne correspond pas au format d'address
-      //càd le login est supposé être un user de l'application
-      address = login + "0at0pingpal";
-    }
-     if (!conversationService.deleteConversation(user.getName(), address)) {
+  @DeleteMapping(value = "{interlocutor}")
+  public void deleteOneConversation(final Principal user, @PathVariable String interlocutor) {
+//    String address = login;
+//    if (!isAddress(login)) { // Vérifie si login ne correspond pas au format d'address
+//      //càd le login est supposé être un user de l'application
+//      address = login + "0at0pingpal";
+//    }
+     if (!conversationService.deleteConversation(user.getName() + '@' + serverDomain, interlocutor)) {
           throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Conversation not found with this user");
         }
     }
-
-   /**
-    * Check if a string is an address
-    *
-    * @param log The user login to test as an address or not
-    * @return true if it is an address
-    */
-   public boolean isAddress(String log){
-     Pattern formatAddress = Pattern.compile(".+0at0.+");
-     Matcher matcher = formatAddress.matcher(log); // Objet Matcher pour effectuer la correspondance
-       //si on est au format d'adresse
-       return matcher.matches();
-   }
+//
+//   /**
+//    * Check if a string is an address
+//    *
+//    * @param log The user login to test as an address or not
+//    * @return true if it is an address
+//    */
+//   public boolean isAddress(String log){
+//     Pattern formatAddress = Pattern.compile(".+0at0.+");
+//     Matcher matcher = formatAddress.matcher(log); // Objet Matcher pour effectuer la correspondance
+//       //si on est au format d'adresse
+//       return matcher.matches();
+//   }
 
 }
 
